small fix for open modals on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -35,6 +35,7 @@
 html {
 	font-family: OpenSauceSans, Arial, Helvetica, sans-serif;
 	font-weight: 500;
+	background:#1a1c20;
 }
 
 h1,
